--- a/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
@@ -63,7 +63,7 @@
                         <h2>Thêm danh mục</h2>
                         <div class="row">
                             <div class="col-md-6 mr-2">
-                                <input class="form-control" type="text" placeholder="Tên danh mục" th:field="*{name}">
+                                <input class="form-control" type="text"  placeholder="Tên danh mục" th:field="*{name}" required title="Vui lòng điền tên danh mục.">
                             </div>
                         </div>
                         <button type="submit" class="btn btn-outline-primary"
